--- a/public/stisla/css/style.css
+++ b/public/stisla/css/style.css
@@ -933,7 +933,7 @@ select.form-control:not([size]):not([multiple]) {
     padding: 10px 15px; }
   .table.table-bordered td,
   .table.table-bordered th {
-    border-color: #f6f6f6; }
+    border-color: #2b346715; }
 
 .table-links {
   color: #34395e;
@@ -1537,7 +1537,7 @@ h6 .badge {
   left: 0;
   width: 100%;
   height: 115px;
-  background-color: #6777ef;
+  background-color: #0B2447;
   z-index: -1; }
 
 .navbar {
@@ -2537,7 +2537,7 @@ body.sidebar-mini .main-sidebar {
         content: initial; }
     body.sidebar-mini .main-sidebar .sidebar-menu > li.active > a {
       box-shadow: 0 4px 8px #acb5f6;
-      background-color: #6777ef;
+      background-color: #0B2447;
       color: #fff; }
     body.sidebar-mini .main-sidebar .sidebar-menu > li ul.dropdown-menu {
       position: absolute;
